--- a/digital_agency/css/main.css
+++ b/digital_agency/css/main.css
@@ -9531,3 +9531,53 @@ a:focus {
     font-size: 25px;
   }
 }
+.content-section {
+  padding: 80px 0 40px 0;
+}
+.block-icon-left {
+  overflow: auto;
+}
+.block-icon-left h1,
+.block-icon-left h2,
+.block-icon-left h3,
+.block-icon-left h4,
+.block-icon-left h5,
+.block-icon-left h6 {
+  margin: 0 0 10px 0;
+  padding: 0;
+  font-size: 20px;
+}
+.block-icon-left .icon-content {
+  float: left;
+  width: 70%;
+}
+.block-icon-left .icon {
+  float: left;
+  width: 30%;
+  margin-top: 10px;
+}
+.who-section {
+  width: 100%;
+  padding: 50px 0;
+  color: #f4f4f4;
+  background: url(../img/background.jpg) no-repeat center scroll;
+  background-color: #333333;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  back-ground-size: cover;
+}
+@media (min-width: 767px) {
+  .who-section {
+    padding: 100px 0;
+  }
+}
+#clients {
+  text-align: center;
+}
+#clients img {
+  display: inline-block;
+  width: 15%;
+  height: 100px;
+  margin: 0 15px;
+}
