--- a/digital_agency/less/main.less
+++ b/digital_agency/less/main.less
@@ -143,3 +143,66 @@ a:hover, a:focus {
     }
 
 }
+
+// content section
+
+.content-section {
+    padding: 80px 0 40px 0;
+}
+
+// Icons Blocks
+
+.block-icon-left {
+    overflow:auto;
+
+    h1, h2, h3, h4, h5, h6 {
+        margin: 0 0 10px 0;
+        padding: 0;
+        font-size: 20px;
+    }
+
+    .icon-content {
+        float: left;
+        width: 70%;
+    }
+
+    .icon {
+        float: left;
+        width: 30%;
+        margin-top: 10px;
+    }
+}
+
+// who section
+
+.who-section {
+    width: 100%;
+    padding: 50px 0;
+    color: @light;
+    background: url(../img/background.jpg) no-repeat center scroll;
+    background-color: @dark;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    back-ground-size: cover;
+}
+
+@media (min-width: 767px) {
+    .who-section {
+        padding: 100px 0;
+    }
+}
+
+// client
+
+
+#clients {
+    text-align: center;
+
+    img {
+        display: inline-block;
+        width: 15%;
+        height: 100px;
+        margin: 0 15px;
+    }
+}
