--- a/edx_hosting/css/style.css
+++ b/edx_hosting/css/style.css
@@ -1,3 +1,4 @@
+
 .nav-container {
     margin: 0;
     width:  100%;
@@ -52,6 +53,11 @@
     display: flex;
 }
 
+.p-1{
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
 .col-2 i {
     display: block; 
     margin-left: auto; 
@@ -64,5 +70,113 @@
 }
 
 .col-md-4-fix { 
-    padding: 0 40px;
+    padding: 20px 40px;
 }
+
+.table-row { 
+    padding-top: 30px;
+    color: white;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
+
+.row1 {
+    background-color:rgb(118, 146, 179); 
+    text-align: center;
+}
+.row1 ul{
+    padding-top: 30px;
+    text-align: left;
+    padding-left: 0px;
+    margin-left: 30px;
+}
+.row1 li{
+    padding-top: 7px;
+    /* list-style: none; */
+    font-size: 14px;
+}
+
+.row-btn {
+    background-color: rgb(118, 146, 179); 
+    width: 100%;
+    display: block;
+    margin:  auto;
+    padding-bottom: 15px;
+    padding-top: 10px;
+
+}
+
+.row-btn a {
+    width: 90%;
+    display: block;
+    margin: 0 auto;
+    border-radius: 0;
+}
+#price-table {
+    background-color: #4C77A9;
+}
+
+.domains-hd {
+    margin-top: 50px;
+    background-color: #C34113;
+    color: white;
+    padding-bottom: 30px;
+
+}
+
+.input-group {
+    width: 100%;    
+}
+
+.input-group input {
+    border-radius: 0;
+    width: 100%;
+}
+.input-group button {
+    border-radius: 0;
+}
+
+.search-row {
+    padding: 15px 20px;
+    margin: 20px 0;
+    background-color: #465766;
+    color: white;
+}
+
+.sec-1 {
+    background-color: #283D51;
+}
+
+.ctn-domain {
+    margin: 0 30px;
+    padding: 30px 0;
+}
+
+.col-p-2 {
+    background-color:  #465766;
+    padding: 15px 15px;
+}
+
+.col-p-3 {
+    float: right;
+}
+.row-3 {
+    padding: 0;
+    margin: 20px 0;
+    color: white;
+}
+
+
+.form-group input{
+    border-radius: 0;
+}
+
+.form-group textarea{
+    border-radius: 0;
+}
+
+.search-row button{
+    border-radius: 0;
+}
+
